dnl Process this file with autoconf to produce a configure script.
AC_INIT(libvaul/tree.t)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_MSG_CHECKING(which relpath works)
if test "`$srcdir/relpath -f /dir/from /dir/to`" = "../to"; then
  RELPATH=relpath
else
  RELPATH=fake-relpath
fi
AC_SUBST(RELPATH)
AC_MSG_RESULT($RELPATH)

AC_CHECK_PROG(LATEX, glatex, glatex, latex)

AC_SUBST(CFLAGS) AC_SUBST(CXXFLAGS) AC_SUBST(LDFLAGS)

AC_CHECK_FUNCS(vasprintf)

AC_ARG_ENABLE(shared,
[  --enable-shared         build shared libraries [no]],
 shared_libs=$enableval, shared_libs=no)
AC_SUBST(shared_libs)

AC_ARG_ENABLE(static,
[  --enable-static         build static libraries [yes]],
 static_libs=$enableval, static_libs=yes)
AC_SUBST(static_libs)

topdir=`cd $srcdir && pwd`
AC_SUBST(topdir)

if test $srcdir != .; then
 echo -n "creating directory tree... "
 for d in libvaulutil ctree libvaul doc; do
  if test ! -d $d; then
   echo -n "$d "
   mkdir $d; ln -s $topdir/$d/Makefile $d/Makefile;
  fi
 done
 ln -s $topdir/Makecommon .
 echo
fi

AC_OUTPUT(Makefile Makeconf)
